# KNMI-FunctionApp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
GetActualTenMinSynopticData/: errors.py  function.json  get_synoptic_data.py  models.py
KNWToSQL/: errors.py  function.json  knw_to_sql.py  models.py
loganalytics/: errors.py  law.py
migrations/: env.py
migrations/versions/: bd3d80b93c6f_add_knwdata_model.py
storage/: adls.py  postgres.py
tests/GetActualTenMinSynopticData/: conftest.py  test_get_synoptic_data.py  test_models.py
tests/KNWToSQL/: conftest.py  test_knw_to_sql.py
tests/KNWToSQL/files/: emptymockknwfile.csv  mockknwfile.csv
tests/loganalytics/: test_law.py
tests/logging/: conftest.py
tests/storage/: test_adls.py  test_postgres.py
