[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "KNMI-Functionapp"
version = ["0.1.0"]
dependencies = [
    "azure-functions==1.11.2",
    "azure-identity==1.10.0",
    "azure-storage-file-datalake==12.8.0",
    "psycopg2==2.9.3",
    "requests==2.28.1",
    "sqlalchemy==1.4.39",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["GetActualTenMinSynopticData*", "KNWToSQL*", "loganalytics", "migrations", "storage"]
exclude = ["tests*"]
namespaces = false

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"
warn_unused_configs = true
mypy_path = "src"
check_untyped_defs = true

[tool.pytest]
testpaths = "tests/"

[tool.flake8]
# Ignoring the below as they mismatch with the black formatter
ignore = "E203, W503"
max-line-length=99
max-complexity=10

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88