[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "KNMI-Functionapp"
version = "0.1.0"
dependencies = [
    "azure-functions==1.11.2",
    "azure-identity==1.10.0",
    "azure-storage-file-datalake==12.8.0",
    "psycopg2==2.9.3",
    "requests==2.28.1",
    "sqlalchemy==1.4.39",
]

[project.optional-dependencies]
dev = [
    "alembic==1.8.1",
    "black"
]
test = [
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "pytest-mock==3.8.2",
    "pytest-freezegun==0.4.2",
    "requests-mock==1.9.3",
    # Fixing httpretty to older version until https://github.com/gabrielfalcao/HTTPretty/issues/425
    # is fixed.
    "httpretty==1.0.5",
]
lint = [
    "mypy==0.960",
    "types-requests==2.28.0",
    "ruff==0.0.267",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["GetActualTenMinSynopticData*", "KNWToSQL*", "loganalytics", "migrations", "storage"]
exclude = ["tests*"]
namespaces = false

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"
warn_unused_configs = true
mypy_path = "src"
check_untyped_defs = true

[tool.pytest]
testpaths = "tests/"

[tool.ruff]
line-length = 99

[tool.ruff.isort]
split-on-trailing-comma = true
